force-app/main/default/objects/CampaignMember/fields/Upselling_email_interest__c.field-meta.xml
<CustomField>
    <fullName>Upselling_email_interest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://jira.orderbird.com/browse/CDS-1623
This field is automatically checked, once the customer clicks on the upselling campaign link</description>
    <label>Upselling email interest</label>
    <type>Checkbox</type>
</CustomField>