force-app/main/default/objects/CampaignMember/fields/wbsendit__Activity__c.field-meta.xml
<CustomField>
    <fullName>wbsendit__Activity__c</fullName>
    <description>Last Campaign Monitor activity type.</description>
    <inlineHelpText>Last Campaign Monitor activity type.</inlineHelpText>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bounced</fullName>
            </value>
            <value>
                <fullName>Clicked</fullName>
            </value>
            <value>
                <fullName>Opened</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Unsubscribed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>