force-app/main/default/objects/CampaignMember/fields/wbsendit__Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>wbsendit__Activity_Date__c</fullName>
    <inlineHelpText>Date of the last Campaign Monitor activity.</inlineHelpText>
    <label>Activity Date</label>
    <type>DateTime</type>
</CustomField>