force-app/main/default/objects/CampaignMember/fields/wbsendit__Clicks__c.field-meta.xml
<CustomField>
    <fullName>wbsendit__Clicks__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Shows number of times the subscriber clicked links from this email campaign.</inlineHelpText>
    <label>Clicks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>