force-app/main/default/objects/CampaignMember/fields/wbsendit__Opens__c.field-meta.xml
<CustomField>
    <fullName>wbsendit__Opens__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Shows number of times the subscriber opened this email campaign.</inlineHelpText>
    <label>Opens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>